# m-n-k-game-AI

./: .gitignore  .pylintrc  README.md  TASK.MD  benchmark_python_multi.py  benchmark_python_single.py  mojoproject.toml  play.py  pyproject.toml  test.py  test_count.py  test_play.py
docs/: Agent.md
mnk/: Agent.py  EVAL.md  Game.mojo  Game.py  agent_utils.mojo  constants.py  play.mojo  play.py  test_evaluate_sequences.mojo
src/: Agent.mojo  Agent.py  Game.py  benchmark_mojo_multi.mojo  benchmark_mojo_single.mojo  play.py  test.mojo
src/config/: config.json
